<resources>
    <string name="app_name">MyBank</string>
    <string name="action_settings">Settings</string>
    <string name="this_week">This Week:</string>
    <string name="log_out">Log Out</string>
    <string name="clear_expenses">Clear Expenses</string>
    <string name="delete_expense">delete expense</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_user">Create User</string>
    <string name="cancel">Cancel</string>
    <string name="username">username</string>
</resources>
